# publicschema.org

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-VOCABULARY  README.md  SECURITY.md  concept-note.md  justfile  pyproject.toml  research-optional-classification.md
.github/: pull_request_template.md
decisions/: 001-licensing.md  002-maturity-model.md  003-domain-namespacing.md  004-naming-conventions.md  005-event-identifier-split.md  006-profile-hierarchy.md  007-profile-property-reuse.md  008-agent-organization.md  009-consent.md  010-profile-derived-outputs.md  011-document-specification-abstracts.md  011-humanitarian-profile-extraction.md  012-sex-vocabulary-iso5218-2022.md  013-marital-status-standard-codes.md  014-crvs-person-naming.md  015-consent-record-scalar-identifier.md  016-country-sync-source.md  017-language-vocabulary-iso-639-2023.md  018-crvs-person-rename.md  019-parental-role-decoupled-from-gender.md  README.md
docs/: authoring-linkml.md  build-scripts-cutover.md  candidate-audit-decisions.md  candidate-audit-findings.md  comparison-linkml.md  consent-lifecycle.md  data-model-guide.md  dci-property-mapping-research.md  design-principles.md  dpv-vocabulary-reference.md  extension-mechanism.md  fhir-mapping-guide.md  integration-guide.md  integration-patterns.md  interoperability-guide.md  jsonld-vc-guide.md  mapping-example.md  meta-namespace.md  methodology.md  migration-cheatsheet.md  opencrvs-decomposition.md  related-standards.md  research-rename-trial-use.md  schema-design.md  (+9 more)
(+1254 files in other folders)
